# skilltree

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
docs/: Cargo.toml
docs/pages/: 11spindle.md  forwardloops.md  kaboomfront.md
docs/src/: main.rs
skilltree-core/: Cargo.toml
skilltree-db/: .env  Cargo.toml  README.md
skilltree-text/: Cargo.toml
skilltree-text/src/: lib.rs
skilltree-tree/: Cargo.toml  skills  tree.sh  tree.svg.hbs
skilltree-tree/src/: main.rs
skilltree-ui/: Cargo.toml
skilltree-web/: Cargo.toml  README.md
skilltree-web/src/: api.rs  main.rs  pages.rs  skills
skilltree-web/static/: style.css
skilltree-web/templates/: admin.html.hbs  error.html.hbs  header.html.hbs  index.html.hbs  layout.html.hbs  skill.html.hbs  tree.svg.hbs  user.html.hbs  users.html.hbs
skilltree_core/: Cargo.toml  README.md
skilltree_core/src/: lib.rs
skilltree_svg/: Cargo.toml  README.md
skilltree_svg/examples/: fulltreeprint.rs  smalltreeprint.rs
skilltree_svg/src/: lib.rs
skilltree_web/: Cargo.toml  README.md  Rocket.toml
skilltree_web/src/: admin.rs  api.rs  main.rs  pages.rs  skills
skilltree_web/static/: admin.js  style.css  user.js
skilltree_web/templates/common/: admin.html.hbs  admin.html.tera  conduct.html.hbs  error.html.hbs  help.html.hbs  help.html.tera  index.html.hbs  layout.html.hbs  privacy.html.hbs  skill.html.hbs  skill.html.tera  user.html.hbs  user.html.tera
skilltree_web/templates/dev_templates/: footer.html.hbs  fulltree.html.hbs  fulltree.html.tera  fxtree.html.tera  header.html.hbs  help.html.tera  layout.html.hbs  layout.html.tera  pbtree.html.tera  phtree.html.tera  privacy.html.hbs  skill.html.hbs  skilltreefxtree.html.hbs  srtree.html.tera  tree.svg.hbs  vttree.html.tera
skilltree_web/templates/prod_templates/: admin.html.hbs  conduct.html.hbs  error.html.hbs  fulltree.html.hbs  fxtree.html.hbs  fxtree.html.tera  help.html.hbs  index.html.hbs  layout.html.hbs  phtrainertree.html.hbs  phtree.html.hbs  phtree.html.tera  privacy.html.tera  srtree.html.hbs  tree.svg.hbs  tree.svg.html  user.html.hbs  vttree.html.hbs
skilltree_web/templates/prod_templates/src/: FX Tree
skilltree_web/templates/skills/: backroll.toml  diveroll.toml
src/: api.rs  core.rs  main.rs  pages.rs
src/core/: _mod.rs  database.rs  group.rs  gym.rs  mod.rs  package.rs  skill.rs  tab.rs  user.rs
src/pages/: base.rs
src/routes/: admin.rs  index.rs  mod.rs  sudo.rs  user.rs
static/: dashboard.js  demo.js  style.css  user.js  userhome.js
templates/: admin.html.tera  dashboard.html.tera  demo.html.tera  discover.html.tera  docs.html.tera  gym.html.tera  index.html.tera  join.html.tera  layout.html.tera  login.html.tera  missing.html.tera  tree.html.tera  user.html.tera  userhome.html.tera
templates/common/: conduct.html.tera  error.html.tera  index.html.tera  skill.html.tera
utils/: Cargo.toml
utils/src/: addtabs.rs  addtgi.rs
(+30 files in other folders)
