[package]
name = "skilltree"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sled = "0.34"
toml = "0.5"
pwhash = "1"
rust-crypto = "^0.2"
bincode = "1.3.3"

[dependencies.rocket]
version = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = [
"serve",
"tera_templates",
"json",
]
