[package]
name = "skilltree-web"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skilltree-core = { path = "../skilltree-core" }
skilltree-db = { path = "../skilltree-db" }
skilltree-text = { path = "../skilltree-text" }
serde = "1"

[dependencies.rocket]
version = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = [
"handlebars_templates",
]
