[package]
name = "skilltree-web"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skilltree_core = { path = "../skilltree_core" }
skilltree_svg = { path = "../skilltree_svg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sled = "0.34"
sled-extensions = { version = "0.2.0", features = ["bincode"] }
toml = "0.5"

[dependencies.rocket]
version = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = [
"serve",
"handlebars_templates",
]
