[package]
name = "utils"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "addtgi"
path = "src/addtgi.rs"

[[bin]]
name = "addtabs"
path = "src/addtabs.rs"
